BUG - messages no longer stay in the selected view if they are too long...

--- a/src/chat/style/channel_view.css
+++ b/src/chat/style/channel_view.css
@@ -1,6 +1,5 @@
 div[id='channel-view-container'] {
     height: 100%;
-    min-width: 765px;
 
     display: flex;
     flex-flow: column nowrap;
