--- a/src/chat/style/chat_input.css
+++ b/src/chat/style/chat_input.css
@@ -1,9 +1,8 @@
 /**MESSAGE INPUT */
 div[id='chat-messages-input-container'] {
     box-sizing: border-box;
-    width: 99%;
+    width: 100%;
     height: 70px;
-    min-height: 70px;
     max-height: 70px;
 
     display: flex;
@@ -116,13 +115,9 @@ button[id='message-input-add-button']:hover {
 }
 
 button[id='message-input-btn1'] {
-
     outline: none;
-    font-size: 1em;
-    font-weight: bold;
 
     background-image: url('/images/page_icons/attach-file.svg');
-
     border-color: var(--message-input-button-border);
 }
 
